# Lucas-Kanade-sparse-optical-flow-algorithm

./: README.md
Proiect_program/: CMakeLists.txt  cornerpoints.cpp  cornerpoints.h  main.cpp  opticalflow.cpp  opticalflow.h  preprocessing.cpp  preprocessing.h  utility.cpp  utility.h
